k8s/eureka/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: adan762/eureka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8761
            initialDelaySeconds: 20    # give app more boot time
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5        # retry longer before failing

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8761
            initialDelaySeconds: 60    # Spring Boot startup can be slow
            periodSeconds: 20
