k8s/eureka/eureka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: tinka.local
      http:
        paths:
          - path: /eureka/?(.*)
            pathType: Prefix
            backend:
              service:
                name: eureka
                port:
                  number: 8761
